outputs/tsp_constructive-constructive/ab-mcts-ahd/2025-09-21_23-21-44/evaluations/problem_eval-8621301850533058704_stdout.txt
Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 11, in <module>
    from gpt import select_next_node_v2 as select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of average distance and destination distance as the problem size decreases. It also introduces a penalty term based on the node's historical selection frequency to avoid revisiting nodes unnecessarily, creating a more adaptive and globally aware heuristic.}
                                                                                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)

During handling of the above exception, another exception occurred:

Traceback (most recent call last):
  File "D:\MCTS-AHD-master\problems\tsp_constructive\eval.py", line 13, in <module>
    from gpt import select_next_node
  File "D:\MCTS-AHD-master\problems\tsp_constructive\gpt.py", line 1
    importance of average distance and destination distance as the problem size decreases. It also introduces a penalty term based on the node's historical selection frequency to avoid revisiting nodes unnecessarily, creating a more adaptive and globally aware heuristic.}
                                                                                                                                              ^
SyntaxError: unterminated string literal (detected at line 1)
